fixed bug on the result tab for overflowing content

--- a/css/_info.scss
+++ b/css/_info.scss
@@ -27,6 +27,7 @@
         background-color: white;
         padding: 1rem;
         border-radius: 5px;
+        overflow-x: hidden;
 
         .long_link {
           display: inline-block;
